<resources>
    <string name="app_name">新闻客户端</string>
    <string name="guide_btn_text">开始使用</string>
    <string name="home">主页</string>
    <string name="news_center">新闻中心</string>
    <string name="smart_service">智慧服务</string>
    <string name="gov">政务</string>
    <string name="settings">设置</string>
    <string name="home_title">首页</string>
    <string name="news_title">新闻中心</string>
    <string name="smart_service_title">智慧服务</string>
    <string name="gov_title">政务</string>
    <string name="settings_title">设置</string>
    <string name="tianxiangyu_1">田香玉你喜欢我吗</string>
    <string name="tianxiangyu_2">田香玉你爱我吗</string>
    <string name="tianxiangyu_3">田香玉我们在一起吧</string>
    <string name="tianxiangyu_4">如果你要是不同意的话，我只能说一句...</string>
    <string name="qunimade">我去你吗的</string>
    <string name="net_error">网络连接失败</string>
    <string name="down_refresh">下拉刷新</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="release_refersh">松开刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="textsize_settings">字体设置</string>
    <string name="share">分享</string>
</resources>
